--- a/index.html
+++ b/index.html
@@ -1583,14 +1583,16 @@ border-bottom-right-radius: 11%;
 .F2{
   display: grid;
   grid-template-columns: 1fr;
+  justify-content: center;
+  justify-items: center;
   font-family: 'georgia';
-  font-size: 1.72rem;
-  width: 90%;
-  height: 290px;
+  font-size: 1.71rem;
+  width: 82%;
+  height: 288px;
   line-height: 31px;
-  text-align: left;
+  text-align: justify;
   padding: 10px;
-  color: #8997ae;
+  color: #819ecb;
   background: transparent;
 }
 
@@ -1602,16 +1604,16 @@ border-bottom-right-radius: 11%;
  
   justify-content: center;
   align-items: center;
-  width: 80%;
+  width: 82%;
   height: 495px;
   padding: 10px;
-  line-height: 26px;
+  line-height: 27px;
   font-family: 'georgia';
   font-size: 22px;
   color: #2c2c2cf3;
   text-align: justify;
   background: transparent;
-  border-bottom: 1.6rem solid #c3225af1;
+  border-bottom: 1.5rem solid #c3225aa7;
 }
 
     .content a:hover{
