--- a/index.html
+++ b/index.html
@@ -2475,17 +2475,17 @@ border-bottom-right-radius: 11%;
 
               <div class="DiapoPhoto">
                 <div class="T">
-                <div style="background:#4a4a4af7; color: #fff; padding: 6px; font-family: 'Poppins'; font-size: 18px">Celebrating Christmas at Tiki N'Yiki's headquarter [Burkina Faso]</div>
+                <div style="background:#5e0826f6; color: rgb(236, 200, 0); padding: 6px; font-family: 'Poppins'; font-size: 18px">Celebrating Christmas at Tiki N'Yiki's headquarter [Burkina Faso]</div>
                 <div><img src="https://www.zupimages.net/up/22/31/z42x.jpg" alt="Christmas at Tiki N'Yiki"></div>
               </div>
 
               <div class="T1">
-                <div style="background: #4a4a4af7; color: #fff; padding: 6px; font-family: 'Poppins'; font-size: 18px">Classes in Ziniare [Burkina Faso]</div>
+                <div style="background:#5e0826f6; color: rgb(236, 200, 0); padding: 6px; font-family: 'Poppins'; font-size: 18px">Classes in Ziniare [Burkina Faso]</div>
                 <div><img src="https://www.zupimages.net/up/22/21/3bad.jpg" alt="Classes"> </div>
               </div>
 
               <div class="T2">
-                <div style="background:#4a4a4af7; color: #fff; padding: 6px; font-family: 'Poppins'; font-size: 18px">Teaching Has Always Been Funny To Me. I Learned A Lot Back</div>
+                <div style="background:#5e0826f6; color: rgb(236, 200, 0); padding: 6px; font-family: 'Poppins'; font-size: 18px">Teaching Has Always Been Funny To Me. I Learned A Lot Back</div>
                 <div><img src="https://www.zupimages.net/up/22/31/ttk3.jpg" alt="Teaching in BF"></div>
               </div>
 
