--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -695,13 +695,13 @@ justify-items: center;
 width: 88%;
 height: 245px;
 padding: 10px;
-color: #dfdedef4;
+color: #e9e8e8;
 background: #ce1354e4;
 box-shadow: 0 0 0.25rem -0.25px rgba(227, 253, 251, 0.883);
 border-radius: 1rem;
-font-family: 'georgia';
-font-size: 13px;
-line-height: 17.5px;
+font-family: 'helvetica';
+font-size: 14px;
+line-height: 18px;
 cursor: pointer;
 margin-top: 0.1rem;
 
@@ -757,13 +757,13 @@ justify-items: center;
 width: 88%;
 height: 245px;
 padding: 10px;
-color: #dfdedef4;
+color: #e9e8e8;
 background: #ce1354e4;
 box-shadow: 0 0 0.25rem -0.25px rgba(227, 253, 251, 0.883);
 border-radius: 1rem;
-font-family: 'georgia';
-font-size: 13px;
-line-height: 17.5px;
+font-family: 'helvetica';
+font-size: 14px;
+line-height: 18px;
 cursor: pointer;
 margin-top: 0.1rem;
           }
@@ -786,13 +786,13 @@ justify-items: center;
 width: 88%;
 height: 245px;
 padding: 10px;
-color: #dfdedef4;
+color: #e9e8e8;
 background: #ce1354e4;
 box-shadow: 0 0 0.25rem -0.25px rgba(227, 253, 251, 0.883);
 border-radius: 1rem;
-font-family: 'georgia';
-font-size: 13px;
-line-height: 17.5px;
+font-family: 'helvetica';
+font-size: 14px;
+line-height: 18px;
 margin-top: 0.1rem;
 cursor: pointer;
           }
