--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
             height: 60px;
             color: #f1f1f1;
             padding: 5px;
-            font-family: 'georgia';
+            font-family: 'helvetica';
             font-size: 18px;
             line-height: 23px;
           }
@@ -561,7 +561,7 @@
             width: 100%;
             height: 777px;
             line-height: 21px;
-            font-family: 'georgia';
+            font-family: 'helvetica';
             font-size: 17px;
             color: #e6e5e5fb;
             background:rgb(182, 24, 79);
@@ -676,7 +676,6 @@ border: 0.15px solid #8f8f8ff9;
             height: 280px;
             background:rgb(182, 24, 79);
             margin-top: -1px;
-            border-radius: 0.56rem;
            }
 
           .Kontent:hover{
@@ -696,11 +695,11 @@ width: 88%;
 height: 245px;
 padding: 10px;
 color: #e9e8e8;
-background: #ce1354e4;
+background: #ca1856eb;
 box-shadow: 0 0 0.25rem -0.25px rgba(227, 253, 251, 0.883);
 border-radius: 1rem;
 font-family: 'helvetica';
-font-size: 14px;
+font-size: 19.8px;
 line-height: 18px;
 cursor: pointer;
 margin-top: 0.1rem;
@@ -710,7 +709,7 @@ margin-top: 0.1rem;
           .Kontent1:hover{
             background: #fff;
             border: 0.13rem solid #000;
-            transition: 0.2s solid ease-in;
+            transition: 0.25s solid ease-in;
             border-radius: 1rem;
             color: #464646f7;
           }
@@ -719,6 +718,7 @@ margin-top: 0.1rem;
 width: 305px;
 height: 190px;
 padding: 5px;
+font-size: 15px;
           }
 
           .BA{
@@ -727,25 +727,21 @@ padding: 5px;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-width: 300px;
-height: 36px;
+width: 290px;
+height: 43px;
 padding: 6px;
-background: #7f0b33f6;
+background: #7b0c33ee;
 color: gold;
 border-radius: 3rem;
-border: 0.15px solid #a0a0a0fe;
-font-size: 1.05rem;
-margin-top: -1.8rem;
+border: 0.15px solid #969696fe;
+font-size: 1.1rem;
+margin-top: -0.6rem;
           }
 
           .BA:hover{
             border: 0.12rem solid #000;
             background: #313131;
             color: #f8f8f8;
-          }
-
-          .AB{
-            font-size: 14px;
           }
 
           .Kontent2{
@@ -758,11 +754,11 @@ width: 88%;
 height: 245px;
 padding: 10px;
 color: #e9e8e8;
-background: #ce1354e4;
+background: #ca1856eb;
 box-shadow: 0 0 0.25rem -0.25px rgba(227, 253, 251, 0.883);
 border-radius: 1rem;
 font-family: 'helvetica';
-font-size: 14px;
+font-size: 19.8px;
 line-height: 18px;
 cursor: pointer;
 margin-top: 0.1rem;
@@ -771,7 +767,7 @@ margin-top: 0.1rem;
 .Kontent2:hover{
   background: #fff;
             border: 0.13rem solid #000;
-            transition: 0.2s solid ease-in;
+            transition: 0.25s solid ease-in;
             border-radius: 1rem;
             color: #464646f7;
           }
@@ -787,11 +783,11 @@ width: 88%;
 height: 245px;
 padding: 10px;
 color: #e9e8e8;
-background: #ce1354e4;
+background: #ca1856eb;
 box-shadow: 0 0 0.25rem -0.25px rgba(227, 253, 251, 0.883);
 border-radius: 1rem;
 font-family: 'helvetica';
-font-size: 14px;
+font-size: 19.8px;
 line-height: 18px;
 margin-top: 0.1rem;
 cursor: pointer;
@@ -800,7 +796,7 @@ cursor: pointer;
           .Kontent3:hover{
             background: #fff;
             border: 0.13rem solid #000;
-            transition: 0.2s solid ease-in;
+            transition: 0.25s solid ease-in;
             border-radius: 1rem;
             color: #464646f7;
           }
@@ -1023,9 +1019,9 @@ animation-delay: 5s;
   padding: 10px;
   border-radius: 0.5rem;
   transition: 0.2s ease-in;
-  color: #cecdcd;
-  background: #c41250dc;
-  box-shadow: 0 0 0.25rem 0.25px rgba(225, 249, 247, 0.89);
+  color: #d4d3d3;
+  background: #d8195ce1;
+  box-shadow: 0 0 0.25rem 0.25px rgba(237, 237, 237, 0.997);
   cursor: pointer;
 }
 
@@ -1105,8 +1101,8 @@ cursor: pointer;
   justify-items: center;
   padding: 9px;
   width: 100%;
-  height:280px;
-  color: #c6c6c6c7;
+  height:285px;
+  color: #d7d7d7d5;
   border-radius: 0.5rem;
   
 }
@@ -1346,7 +1342,7 @@ font-size: 18px;
   background:rgb(213, 28, 92);
   border: 0.45px solid #8f8f8f;
   border-radius: 0.5rem;
-  font-family: 'georgia';
+  font-family: 'helvetica';
   font-size: 13.45px;
   width: auto;
   height: 120px;
@@ -2515,7 +2511,7 @@ border-bottom-right-radius: 10%;
 
               <a href="https://www.education.gov.bf/accueil" target="_blank">
                 <div class="DiV2">
-                <b style="font-size: 20px; font-family: 'georgia'; line-height: 28px">The More The Rate of Education Get Higher, The More The Rate of Poverty Will Be Lower And The More the Index of Development Will Be Ascendant. That Highlights How Education Is Important and Stands as a Foundation for Nations to Implement a Sustainable Development.</b>
+                <b style="font-size: 24.43px; font-family: 'helvetica'; line-height: 27.73px">The More The Rate of Education Get Higher, The More The Rate of Poverty Will Be Lower And The More the Index of Development Will Be Ascendant. That Highlights How Education Is Important and Stands as a Foundation for Nations to Implement a Sustainable Development.</b>
                 </div>
               </a>
               
