--- a/index.html
+++ b/index.html
@@ -1339,8 +1339,8 @@ font-size: 18px;
   justify-content: center;
   align-items: center;
   color: #ececec;
-  background:rgb(213, 28, 92);
-  border: 0.45px solid #8f8f8f;
+  background: #c41854e3;
+  box-shadow: 0 0 0.25rem 0.25px rgba(250, 250, 250, 0.997);
   border-radius: 0.5rem;
   font-family: 'helvetica';
   font-size: 13.45px;
@@ -1456,15 +1456,15 @@ font-size: 18px;
 .FooD{
   width: 448px;
   height: 350px;
-  font-family: georgia;
-  font-size: 27px;
-  line-height: 29px;
-  color: #d5d5d5dc;
+  font-family: helvetica;
+  font-size: 27.45px;
+  line-height: 32px;
   padding: 20px;
   border-radius: 0.45rem;
   text-align: left;
-  background: #cc1354dc;
-  box-shadow: 0 0 0.25rem 0.25px rgba(212, 244, 241, 0.802);
+  color: #ceccccf7;
+  background: #d71c5de1;
+  box-shadow: 0 0 0.25rem 0.25px rgba(243, 242, 242, 0.997);
 }
 
 .FooD:hover{
