--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                  justify-items: center;
                  background: #fff;
                  width: 100%;
-                 height: 150px;
+                 height: 144px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
@@ -191,11 +191,12 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            width: 100%;
-            height: 32.5px;
             cursor: pointer;
             font-family: georgia;
-            font-size: 17px;
+            font-size: 19px;
+            margin-top: -5px;
+            height: 40px;
+            width: 100%;
             color: #696969ef;
             border: 0.3rem solid transparent;
             background: transparent;
@@ -213,11 +214,12 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            margin-top: -5px;
+            height: 40px;
             width: 100%;
-            height: 32.5px;
+            font-size: 19px;
             cursor: pointer;
             font-family: georgia;
-            font-size: 17px;
             color: #696969ef;
             border: 0.3rem solid transparent;
             background: transparent;
@@ -234,11 +236,12 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            margin-top: -5px;
+            height: 40px;
             width: 100%;
-            height: 32.5px;
+            font-size: 19px;
             cursor: pointer;
             font-family: georgia;
-            font-size: 17px;
             color: #696969ef;
             border: 0.3rem solid transparent;
             background: transparent;
@@ -255,11 +258,12 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            margin-top: -5px;
+            height: 40px;
             width: 100%;
-            height: 32.5px;
+            font-size: 19px;
             cursor: pointer;
             font-family: georgia;
-            font-size: 17px;
             color: #696969ef;
             border: 0.3rem solid transparent;
             background: transparent;
@@ -276,12 +280,13 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            margin-top: -5px;
+            height: 40px;
             width: 100%;
-            height: 32.5px;
+            font-size: 19px;
             cursor: pointer;
             font-family: georgia;
             border: 0.3rem solid transparent;
-            font-size: 17px;
             color: #696969ef;
             background: transparent;
           }
@@ -297,12 +302,13 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            margin-top: -5px;
+            height: 40px;
             width: 100%;
-            height: 32.5px;
+            font-size: 19px;
             cursor: pointer;
             font-family: georgia;
             border: 0.3rem solid transparent;
-            font-size: 17px;
             color: #696969ef;
             background: transparent;
           }
@@ -318,12 +324,13 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            margin-top: -5px;
+            height: 40px;
             width: 100%;
-            height: 32.5px;
+            font-size: 19px;
             cursor: pointer;
             font-family: georgia;
             border: 0.3rem solid transparent;
-            font-size: 17px;
             color: #696969ef;
             background: transparent;
           }
@@ -441,11 +448,11 @@
         justify-content: center;
         justify-items: center;
             width: 100%;
-            height: 796px;
+            height: 795px;
             background: transparent;
             padding: 10px;
             color: #000;
-            margin-top: 3.6rem;
+            margin-top: 3.64rem;
            
           }
 
@@ -1338,16 +1345,16 @@ font-size: 18px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: #ececec;
-  background: #c41854e3;
-  box-shadow: 0 0 0.25rem 0.25px rgba(250, 250, 250, 0.997);
+  color: #f9f9f9f6;
+  background: #d91b5ee3;
+  box-shadow: 0 0 0.3rem 0.25px rgba(250, 250, 250, 0.997);
   border-radius: 0.5rem;
   font-family: 'helvetica';
-  font-size: 13.45px;
+  font-size: 15.49px;
   width: auto;
   height: 120px;
   padding: 7px;
-  line-height: 17px;
+  line-height: 18.34px;
   text-align: justify;
   cursor: pointer;
   margin-top: 11px;
@@ -1588,14 +1595,14 @@ border-bottom-right-radius: 10%;
   height: 225px;
   line-height: 30.9px;
   text-align: justify;
-  color: #476796fa;
+  color: #486a9cfa;
   background: transparent;
 }
 
 .F2:hover{
-  color: #6488befa;  
-  border-bottom: 0.9rem solid #6488befa;
-  transition: 0.25s ease-in;
+  color: #243677fe;  
+  border-bottom: 0.85rem solid #4c71a9fd;
+  transition: 0.3s ease-in;
 }
 
 .footer2{
@@ -1806,18 +1813,18 @@ border-bottom-right-radius: 10%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 64px;
-    height: 56px;
+    width: 74px;
+    height: 70px;
     border-radius: 50%;
     color: yellow;
     font-family: 'arial narrow';
-    font-size: 13.5px;
+    font-size: 15.5px;
     padding: 2px;
-    background: #c3225af1;
+    background: #c41f59ed;
     margin-top: -10px;
-    margin-left: 0.4rem;
+    margin-left: 0.3rem;
     cursor: pointer;
-    border: 0.15rem solid rgb(15, 15, 126);
+    border: 0.13rem solid rgb(12, 12, 102);
     
    }
 
