--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 border-bottom: 0.45rem solid rgba(15, 15, 140, 0.951);
+                 border-bottom: 0.55rem solid #f1f1f1e5;
           }
           
           .Joint-Point{
