--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 border-bottom: 0.55rem solid #f1f1f1e5;
+                 border-bottom: 0.55rem solid #f1f1f1;
           }
           
           .Joint-Point{
