--- a/index.html
+++ b/index.html
@@ -473,14 +473,30 @@
            transition: 0.2s ease-in;
           }
 
-          .PH img{
+          .PH{
+           font-family: helvetica;
+            }
+
+            .PH img{
             width: 101%;
             height: 470px;
+            opacity: 0.75;
           }
+
+          .PH img:hover{
+            opacity: 1;
+          }
+
           .CIP img{
             width: 101%;
             height: 470px;
-          }
+            opacity: 0.75;
+         }
+
+         .CIP img:hover{
+            opacity: 1;
+         }
+          
             
           .PH img:hover {
             transform: scale(1.01);
@@ -893,9 +909,17 @@ width: 100%;
 height: 380px;
 animation: auto 15s ease-in infinite;
 animation-delay: 15s;
+background: #fff;
+cursor: pointer;
 }
-.T img{
 
+.T img:hover{
+  opacity: 1;
+  transition: 0.25s linear;
+}
+
+.T img{
+  opacity: 0.33;
   width: 100%;
   height: 380px;
 }
@@ -923,8 +947,14 @@ animation-delay: 15s;
 
 
 .T1 img{
+  opacity: 0.33;
   width: 100%;
   height: 380px;
+}
+
+.T1 img:hover{
+  opacity: 1;
+  transition: 0.25s linear;
 }
 
 .T1 {
@@ -933,6 +963,8 @@ width: 100%;
 height: 380px;
 animation: auto 15s ease-in infinite;
 animation-delay: 10s;
+background: #fff;
+cursor: pointer;
 }
 
 @keyframes auto{
@@ -964,9 +996,16 @@ width: 100%;
 height: 380px;
 animation: auto 15s ease-in infinite;
 animation-delay: 5s;
+background: #fff;
+cursor: pointer;
 }
 
+.T2 img:hover{
+  opacity: 1;
+  transition: 0.25s linear;
+}
 .T2 img{
+  opacity: 0.33;
   width: 100%;
   height: 380px;
 }
@@ -1291,10 +1330,6 @@ font-size: 18px;
 .Vertical-Writing:hover{
   color: #fff;
   transition: 0.2s ease;
-}
-
-.PH{
-  font-family: helvetica;
 }
 
 .HPhoto{
