--- a/index.html
+++ b/index.html
@@ -474,23 +474,32 @@
           }
 
           .PH{
+            width: 101%;
+            height: 470px;
+            background: #fff;
            font-family: helvetica;
             }
 
             .PH img{
             width: 101%;
             height: 470px;
-            opacity: 0.75;
+            opacity: 0.53;
           }
 
           .PH img:hover{
             opacity: 1;
           }
 
+          .CIP{
+            width: 101%;
+            height: 470px;
+            background: #fff;
+          }
+
           .CIP img{
             width: 101%;
             height: 470px;
-            opacity: 0.75;
+            opacity: 0.53;
          }
 
          .CIP img:hover{
