--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                  justify-items: center;
                  background: #fff;
                  width: 100%;
-                 height: 125px;
+                 height: 122px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
@@ -1040,7 +1040,10 @@ cursor: pointer;
             }
         }
 
-
+.BoderTopColor1{
+border-top: 0.2px solid #e4769f;
+border-bottom: 0.2px solid #e4769f;
+}
 .Dive1{
   display: grid;
   grid-template-rows: 1fr 1fr;
@@ -2507,17 +2510,17 @@ border-bottom-right-radius: 10%;
 
               <div class="DiapoPhoto">
                 <div class="T">
-                <div style="background:#5e0826f6; color: rgb(236, 200, 0); padding: 6px; font-family: 'Poppins'; font-size: 18px">Celebrating Christmas at Tiki N'Yiki's headquarter [Burkina Faso]</div>
+                <div class="BoderTopColor1" style="background:#760b30f6; color: rgb(236, 200, 0); padding: 6px; font-family: 'Poppins'; font-size: 18px">Celebrating Christmas at Tiki N'Yiki's headquarter [Burkina Faso]</div>
                 <div><img src="https://www.zupimages.net/up/22/31/z42x.jpg" alt="Christmas at Tiki N'Yiki"></div>
               </div>
 
               <div class="T1">
-                <div style="background:#5e0826f6; color: rgb(236, 200, 0); padding: 6px; font-family: 'Poppins'; font-size: 18px">Classes in Ziniare [Burkina Faso]</div>
+                <div class="BoderTopColor1" style="background:#760b30f6; color: rgb(236, 200, 0); padding: 6px; font-family: 'Poppins'; font-size: 18px">Classes in Ziniare [Burkina Faso]</div>
                 <div><img src="https://www.zupimages.net/up/22/21/3bad.jpg" alt="Classes"> </div>
               </div>
 
               <div class="T2">
-                <div style="background:#5e0826f6; color: rgb(236, 200, 0); padding: 6px; font-family: 'Poppins'; font-size: 18px">Teaching Has Always Been Funny To Me. I Learned A Lot Back</div>
+                <div class="BoderTopColor1" style="background:#760b30f6; color: rgb(236, 200, 0); padding: 6px; font-family: 'Poppins'; font-size: 18px">Teaching Has Always Been Funny To Me. I Learned A Lot Back</div>
                 <div><img src="https://www.zupimages.net/up/22/31/ttk3.jpg" alt="Teaching in BF"></div>
               </div>
 
