--- a/index.html
+++ b/index.html
@@ -169,12 +169,12 @@
                  justify-items: center;
                  background: #fff;
                  width: 100%;
-                 height: 122px;
+                 height: 120px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 border-bottom: 0.55rem solid #f1f1f1;
+                 border-bottom: 0.6rem solid #101f84f9;
           }
           
           .Joint-Point{
@@ -1850,7 +1850,7 @@ border-bottom-right-radius: 10%;
     font-size: 15.5px;
     padding: 2px;
     background: #c41f59ed;
-    margin-top: -14px;
+    margin-top: -16px;
     margin-left: 0.3rem;
     cursor: pointer;
     border: 0.13rem solid rgb(12, 12, 102);
