--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                  justify-items: center;
                  background: #fff;
                  width: 100%;
-                 height: 120px;
+                 height: 125px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
@@ -346,7 +346,7 @@
       justify-items: center;
       width: 100%;
       height: auto;
-      background: #eeeeeee2;  
+      background: transparent;  
       color: rgba(144, 141, 141, 0.92);
       font-family: 'arial';
       padding: 0.5rem;
@@ -426,11 +426,11 @@
         justify-content: center;
         justify-items: center;
             width: 100%;
-            height: 795px;
+            height: 792px;
             background: transparent;
             padding: 10px;
             color: #000;
-            margin-top: 3.64rem;
+            margin-top: 4.25rem;
            
           }
 
@@ -1584,8 +1584,8 @@ font-size: 19px;
         }
 
 .ViD{
-  width: 85.5%;
-  height: 509px;
+  width: 85%;
+  height: 496px;
   display: flex;
   position: relative;
   flex-direction: column;
@@ -1595,11 +1595,8 @@ color: #c5275ef7;
 font-family: Helvetica;
 font-size: 1.86rem;
 line-height: 28px;
-background: #fcfbfbf6;
-padding: 18px;
-border-bottom: 0.5rem solid rgba(0, 183, 255, 0.941);
-border-bottom-left-radius: 10%;
-border-bottom-right-radius: 10%;
+background: #fff;
+border-bottom: 0.55rem solid rgba(0, 183, 255, 0.941);
 }
 
 .ViD:hover{
@@ -1842,18 +1839,18 @@ border-bottom-right-radius: 10%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 70px;
-    height: 65px;
+    width: 68px;
+    height: 62px;
     border-radius: 50%;
     color: yellow;
     font-family: 'arial narrow';
-    font-size: 15.5px;
+    font-size: 15.25px;
     padding: 2px;
     background: #c41f59ed;
-    margin-top: -16px;
+    margin-top: -10px;
     margin-left: 0.3rem;
     cursor: pointer;
-    border: 0.13rem solid rgb(12, 12, 102);
+    border: 0.13rem solid rgb(11, 11, 96);
     
    }
 
@@ -1864,26 +1861,26 @@ border-bottom-right-radius: 10%;
    }
 
    .SPan{
-    background: #ddddddc0;  
+    background: #dcdcdcd5;  
     display: flex; 
+    position: relative;
     width: 100%;
-    height: 40px;
+    height: 59px;
     justify-content: center; 
     align-items: center; 
-    padding: 0.5rem;
     color: #000;
-    margin-top: 0.75rem;
+    font-size: 20px;
 }
 
 .SPan:hover{
-    background:#242424f5;
+    background:#171717ed;
     color: #ff0;
-    border-top: 2px solid #f1f1f1;
+    border-top: 2px solid #fff;
 }
 
     .SPan:hover{
         transform: scaleY(1.03);
-        transition: 0.12s ease-in;
+        transition: 0.2s linear;
     }
 
     .top-container1{
