--- a/index.html
+++ b/index.html
@@ -217,9 +217,9 @@
           }
 
           .myDiv:hover{
-            border-bottom: 0.35rem solid rgb(29, 63, 255);
+            border-bottom: 0.7rem solid rgb(29, 63, 255);
             color: rgb(29, 63, 255);
-            transition: 0.3s ease-in;
+            transition: 0.15s ease-in;
       
           }
 
@@ -240,9 +240,9 @@
           }
 
           .myDiv1:hover{
-      border-bottom: 0.35rem solid rgb(255, 4, 0);
+      border-bottom: 0.7rem solid rgb(255, 4, 0);
       color: rgb(255, 4, 0);
-      transition: 0.3s ease-in;
+      transition: 0.15s ease-in;
           }
 
           .myDiv2{
@@ -262,9 +262,9 @@
           }
 
           .myDiv2:hover{
-            border-bottom: 0.35rem solid rgb(169, 22, 169);
-      color: rgb(169, 22, 169);
-      transition: 0.3s ease-in;
+            border-bottom: 0.7rem solid rgb(175, 15, 175);
+      color: rgb(175, 15, 175);
+      transition: 0.15s ease-in;
           }
 
           .myDiv3{
@@ -284,9 +284,9 @@
           }
 
           .myDiv3:hover{
-            border-bottom: 0.35rem solid #000;
-      color: #000;
-      transition: 0.3s ease-in;
+            border-bottom: 0.7rem solid #000000f3;
+      color: #000000f3;
+      transition: 0.15s ease-in;
           }
 
           .myDiv4{
@@ -306,9 +306,9 @@
           }
 
           .myDiv4:hover{
-            border-bottom: 0.35rem solid rgb(8, 139, 205);
+            border-bottom: 0.7rem solid rgb(8, 139, 205);
       color: rgb(8, 139, 205);
-      transition: 0.3s ease-in;
+      transition: 0.15s ease-in;
           }
           
           .myDiv6{
@@ -328,9 +328,9 @@
           }
 
           .myDiv6:hover{
-            border-bottom: 0.35rem solid rgb(13, 170, 47);
+            border-bottom: 0.7rem solid rgb(13, 170, 47);
       color: rgb(13, 170, 47);
-      transition: 0.3s ease-in;
+      transition: 0.15s ease-in;
           }
 
 
