--- a/index.html
+++ b/index.html
@@ -183,12 +183,11 @@
             justify-content: center;
             align-items: center;
             width: 100%; 
-            height: 67px; 
-            padding: 5px; 
-            background: #e0e0e0de;
+            height: 70px; 
+            background: #dededef1;
             font-family: 'arial black';
             font-size: 1rem;
-            color: #000;
+            color: #2c2b2bf6;
           }
           
           .Joint-Point{
@@ -1599,7 +1598,7 @@ font-size: 19px;
 
 .ViD{
   width: 85%;
-  height: 490px;
+  height: 499px;
   display: flex;
   position: relative;
   flex-direction: column;
@@ -1608,19 +1607,14 @@ font-size: 19px;
 color: #c5275ef7;
 line-height: 30px;
 background: #fff;
-border-bottom: 1.5rem solid rgb(0, 204, 255);
+border-bottom: 1.5rem solid rgba(0, 195, 255, 0.956);
 margin-top: 1rem;
-}
-
-.ViD:hover{
-  background: #fff;
 }
 
 .footer1 img{
    width: 300px;
    height: 230px;
    cursor: pointer;
-   
 }
 
 .F2{
@@ -1863,12 +1857,11 @@ margin-top: 1rem;
     margin-top: -10px;
     margin-left: 0.3rem;
     cursor: pointer;
-    border: 0.13rem solid rgb(11, 11, 96);
+    border: 0.12rem solid rgb(12, 12, 108);
     
    }
 
    .TYK1:hover{
-   
     transform: rotate(360deg);
     transition: 0.5s ease;
    }
