--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
       padding: 5px;
       border-radius: 0.3rem;
       color: #fff;
-      margin-top: -0.1rem;
+      margin-top: -1.15rem;
+      margin-left: 0.55rem;
     }
 
     .Welcome:hover{
@@ -2243,10 +2244,12 @@ margin-top: 1rem;
 
           <div class="top-container">
 
+            <a href="https://www.online-translator.com/translation/french-english/manger" target="_blank">
+            
             <div class="Welcome">
-              Welcome Here ! Enjoy your Visit !
+              Translator
             </div>
-      
+          </a>
             <a href="https://en.wikipedia.org/wiki/Burkina_Faso" target="_blank">
             <div class="BF">
              Burkina Faso
