--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         
     }
 
-    .Welcome{
+    .Translator{
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -2246,7 +2246,7 @@ margin-top: 1rem;
 
             <a href="https://www.online-translator.com/translation/french-english/manger" target="_blank">
             
-            <div class="Welcome">
+            <div class="Translator">
               Translator
             </div>
           </a>
