--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       margin-left: 0.55rem;
     }
 
-    .Welcome:hover{
+    .Translator:hover{
       transition: 0.3s ease-in;
       width: 100%;
       color: rgb(4, 205, 255);
