--- a/index.html
+++ b/index.html
@@ -1287,11 +1287,11 @@ font-size: 14px;
 
 .HPh{
   display: grid;
-  grid-template-columns: 0.8fr 0.74fr;
-  column-gap: 0.3rem;
+  grid-template-columns: 0.8fr 0.7fr;
+  column-gap: 0.4rem;
   justify-content: space-between;
   justify-items: center;
-  width: 101.8%;
+  width: 101.9%;
   height: 514px;
   padding: 25px;
   background:rgb(182, 24, 79);
@@ -1302,10 +1302,10 @@ font-size: 14px;
 
 .VerTiWA{
   height: 140px;
-  line-height: 30px;
-  font-size: 1.99rem;
-  color: #aaa9a9;
-  width: 100%;
+  line-height: 33px;
+  font-size: 1.8rem;
+  color: #d3d3d3;
+  width: 102%;
 }
 
 .VertiWA:hover{
@@ -1324,7 +1324,7 @@ line-height: 14.25px;
 background: #7f0b33f6;
 color: gold;
 border-radius: 3rem;
-border: 0.15px solid #8f8f8ff9;
+border: 0.15px solid #9a9999f9;
 }
 
 .VerTiWa:hover{
@@ -1374,7 +1374,7 @@ font-size: 18px;
 }
 
 .H-P-H img{
-  width: 640px;
+  width: 630px;
   height: 450px;
   cursor: pointer;
 }
@@ -2624,7 +2624,7 @@ margin-top: 1rem;
                   <div class="H-P-H">
                   <figure>
                     <img src="https://www.zupimages.net/up/22/27/zf4p.jpg" alt="Red Flower">
-                    <figcaption style="font-size: 16px; text-align: left; color: rgb(36, 208, 255);">
+                    <figcaption style="font-size: 16px; text-align: left; color: rgb(36, 226, 255);">
                       A Multicolored Flower Shining Summertime
                     </figcaption>
                 </figure>
