--- a/index.html
+++ b/index.html
@@ -1287,11 +1287,11 @@ font-size: 14px;
 
 .HPh{
   display: grid;
-  grid-template-columns: 0.8fr 0.7fr;
-  column-gap: 0.4rem;
+  grid-template-columns: 0.8fr 0.73fr;
+  column-gap: 0.25rem;
   justify-content: space-between;
   justify-items: center;
-  width: 101.9%;
+  width: 101.8%;
   height: 514px;
   padding: 25px;
   background:rgb(182, 24, 79);
@@ -1303,7 +1303,7 @@ font-size: 14px;
 .VerTiWA{
   height: 140px;
   line-height: 33px;
-  font-size: 1.8rem;
+  font-size: 1.9rem;
   color: #d3d3d3;
   width: 102%;
 }
@@ -2606,7 +2606,7 @@ margin-top: 1rem;
 
                       <a href="https://randomactsofflowers.org/guest-blog-magic-healing-power-flowers-katie-hess-lotuswei/" target="_blank">
                       <div class="VerTiWA">
-                      <b> What Is The Power of Flower on HealthCare ?</b>
+                      <b> What Is The Power of Flower ?</b>
                     <br> 
                       Since Antiquity human-being has explored many ways to use plants especially flowers to heal, getting a well-being, strenghten their minds. This has led to the invention of modern medicinal drugs.
                     </div>
