--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 border-bottom: 0.6rem solid #101f84f9;
+                 border-bottom: 0.6rem solid #0e1a88fb;
           }
 
           .navbar0{
@@ -1610,9 +1610,10 @@ color: #c5275ef7;
 line-height: 27px;
 background: transparent;
 border-left: 0.5rem solid rgb(182, 24, 79);
+border-right: 0.5rem solid rgb(182, 24, 79);
 padding: 22px;
-margin-top: 7.5rem;
-opacity: 0.68;
+margin-top: 7.7rem;
+opacity: 0.67;
 }
 
 .ViD:hover{
@@ -2373,7 +2374,7 @@ background: transparent;
               
                 <h1 style="font-size: 1.9rem; color: greenyellow; margin-left: 1.6rem;">What it means to live with a disability ?</h1>
               
-            <p style="color: rgba(31, 102, 164, 0.983) ; font-size: 21.5px; text-align: left; line-height: 32px;">Living with disability is very challenging but also learning in terms of how some people behave before a disabled person. By excellence it makes disabled people being as social barometers to measure the humility, people compassion, how they are taking care of others, their receptivity, their proaction etc. 
+            <p style="color: rgba(31, 102, 164, 0.983) ; font-size: 21.5px; text-align: left; line-height: 31.45px;">Living with disability is very challenging but also learning in terms of how some people behave before a disabled person. By excellence it makes disabled people being as social barometers to measure the humility, people compassion, how they are taking care of others, their receptivity, their proaction etc. 
               There is no doubt that being disabled is not easy and the level of difficulties varies from person to person and from a region to another.
                Depending the status and the region where disabled people are living, will determine the quality and life experiences. Everyone does know that there are many discriminations on a daily basis and it's to tough for some of people living with disabilities to sometimes fulfill. That's why Tiki N'Yiki is focused to meet the needs of disabled children with improving edcuation then increase opportunities.
               </p>
