--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         font-family: 'georgia';
         font-size: 0.72rem;
         color: gold;
-        background: #0a1157e0;
+        background: #0b177de2;
     }
 
     .reader{
@@ -168,14 +168,15 @@
         row-gap: 0.39rem;
                  justify-content: space-between;
                  justify-items: center;
-                 background: #fff;
+                 background: #f0f8fa;
                  width: 100%;
                  height: 120px;
+                 opacity: 0.79;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 border-bottom: 0.6rem solid #121d82f5;
+                 border-bottom: 0.6rem solid #101a77f5;
           }
 
           .Joint-Point{
@@ -1712,13 +1713,21 @@ font-size: 19px;
         }
 
         .ViD{
-          width: 59.98%;
-          height: 305px;
+          width: 59%;
+          height: 500px;
           color: rgba(31, 102, 164, 0.983) ; 
-          font-size: 21.7px; 
+          font-size: 21px; 
           text-align: left; 
-          line-height: 30px;
+          line-height: 26px;
           opacity: 0.67;
+          padding: 2rem;
+          border-left: 0.25rem dotted rgb(252, 68, 2);
+          cursor: pointer;
+        }
+
+        .ViD:hover{
+          border-bottom: 1.5rem solid rgba(35, 135, 189, 0.869) ;
+          transition: 0.25s ease-in;
         }
 
 .footer1 img{
@@ -2456,7 +2465,7 @@ font-size: 19px;
 
               <div class="ViD">
               
-                <h1 style="font-size: 2rem; text-align: left; color: orangered;">What it means to living with a disability ?</h1>
+                <h1 style="font-size: 1.7rem; text-align: left; color: orangered;">What it means to live with a disability ?</h1>
             <p>Living as a disabled is very challenging but also learning in terms of how the society makes its approach with disabilty and disabled people in general, Sometimes, it's like those people may be similar to social barometers despite social bareers they are experiencing every single day. 
               From disabled people, it may be possible to jauge the level of humility, sensibility, receptivity, proactivity and/or solidarity amongst many other qualities of people, based partly on their behavings. 
               There is no doubt that being disabled is not easy and the level of difficulties varies from person to person and from a region to another.
