--- a/index.html
+++ b/index.html
@@ -177,6 +177,12 @@
                  top: 0;
                  position: sticky;
                  border-bottom: 0.6rem solid #101a77f5;
+                 cursor: pointer;
+          }
+
+          .navbar:hover{
+            opacity: 1;
+            background: #fff;
           }
 
           .Joint-Point{
