--- a/index.html
+++ b/index.html
@@ -1753,6 +1753,7 @@ font-size: 19px;
           border: 0.5rem solid rgba(5, 197, 255, 0.922) ;
           border-radius: 1rem;
           margin-top: 5px;
+          background: #f1f1f1;
         }
 
         .ViD:hover{
