--- a/index.html
+++ b/index.html
@@ -170,13 +170,13 @@
                  justify-items: center;
                  background: #f0f8fa;
                  width: 100%;
-                 height: 120px;
+                 height: 127px;
                  opacity: 0.89;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 0 0.5rem 0.25px rgba(0, 200, 255, 0.977) ;
+                 box-shadow: 0 5px 0.5rem 0.5px rgba(10, 40, 109, 0.981);
                  cursor: pointer;
           }
 
