--- a/index.html
+++ b/index.html
@@ -1755,15 +1755,16 @@ font-size: 19px;
           align-items: center;
           flex-direction: column;
           width: 75%;
-          height: 520px;
+          height: 526px;
           color: rgba(31, 102, 164, 0.983) ; 
-          font-size: 23.86px; 
+          font-size: 23.95px; 
           text-align: left; 
-          line-height: 33.1px;
+          line-height: 32.9px;
           opacity: 0.66;
           padding: 0.5rem;
           cursor: pointer;
           margin-top: 5px;
+          border-bottom: 0.75rem solid #0468fe;
         }
 
         .ViD:hover{
