--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 7px 0.5rem 1px rgba(9, 37, 102, 0.981);
+                 box-shadow: 0.75px 0.5rem 1px rgba(15, 54, 146, 0.987);
                  cursor: pointer;
           }
 
