--- a/index.html
+++ b/index.html
@@ -355,10 +355,10 @@
 
     .navbar1{
       display: grid;
-      grid-template-rows: 0.9fr 1fr;
+      grid-template-rows: 0.5fr 0.6fr 0.7fr;
       justify-content: space-between;
       justify-items: center;
-      row-gap: 3.3rem;
+      row-gap: 1rem;
       width: 100%;
       height: auto;
       background: transparent;  
@@ -1755,7 +1755,7 @@ font-size: 19px;
           align-items: center;
           flex-direction: column;
           width: 75.35%;
-          height: 520px;
+          height: 490px;
           color: rgba(31, 102, 164, 0.983) ; 
           font-size: 23.9px; 
           text-align: left; 
@@ -1763,8 +1763,8 @@ font-size: 19px;
           opacity: 0.66;
           padding: 0.5rem;
           cursor: pointer;
-          margin-top: 5px;
           border-bottom: 0.85rem solid #0485fe;
+          margin-top: -3.7rem;
         }
 
         .ViD:hover{
@@ -2505,6 +2505,8 @@ font-size: 19px;
             </div>
 
           </div>
+
+          <div class="ViDe" style="width: 100%; height: 130px; background: #e1e1e1c3;"></div>
 
               <div class="ViD">
               
