--- a/index.html
+++ b/index.html
@@ -355,10 +355,9 @@
 
     .navbar1{
       display: grid;
-      grid-template-rows: 0.5fr 0.6fr 0.7fr;
+      grid-template-rows: 0.6fr 0.6fr 0.6fr;
       justify-content: space-between;
       justify-items: center;
-      row-gap: 1rem;
       width: 100%;
       height: auto;
       background: transparent;  
@@ -444,7 +443,7 @@
             background: transparent;
             padding: 10px;
             color: #000;
-            margin-top: 4.5rem;
+            margin-top: 1rem;
            
           }
 
@@ -1754,17 +1753,16 @@ font-size: 19px;
           justify-content: center;
           align-items: center;
           flex-direction: column;
-          width: 75.35%;
-          height: 490px;
+          width: 76%;
+          height: 510px;
           color: rgba(31, 102, 164, 0.983) ; 
-          font-size: 23.9px; 
+          font-size: 23.6px; 
           text-align: left; 
-          line-height: 32.9px;
+          line-height: 33px;
           opacity: 0.66;
           padding: 0.5rem;
           cursor: pointer;
-          border-bottom: 0.85rem solid #0485fe;
-          margin-top: -3.7rem;
+          margin-top: -3.5rem;
         }
 
         .ViD:hover{
@@ -2506,7 +2504,7 @@ font-size: 19px;
 
           </div>
 
-          <div class="ViDe" style="width: 100%; height: 130px; background: #e1e1e1c3;"></div>
+          <div class="ViDe" style="margin-top: -0.99rem; width: 100%; height: 90px; background: #dcdcdce1; opacity: 0.97;"></div>
 
               <div class="ViD">
               
