--- a/index.html
+++ b/index.html
@@ -355,11 +355,11 @@
 
     .navbar1{
       display: grid;
-      grid-template-rows: 0.6fr 0.6fr 0.6fr;
-      justify-content: space-between;
+      grid-template-rows: 0.6fr 0.2fr 0.5fr;
+      justify-content: center;
       justify-items: center;
       width: 100%;
-      height: auto;
+      height: 1060px;
       background: transparent;  
       color: rgba(126, 124, 124, 0.92);
       font-family: 'helvetica';
@@ -443,7 +443,6 @@
             background: transparent;
             padding: 10px;
             color: #000;
-            margin-top: 1rem;
            
           }
 
@@ -1753,16 +1752,15 @@ font-size: 19px;
           justify-content: center;
           align-items: center;
           flex-direction: column;
-          width: 76%;
-          height: 510px;
+          width: 75.55%;
+          height: 539px;
           color: rgba(31, 102, 164, 0.983) ; 
-          font-size: 24.5px; 
-          text-align: left; 
-          line-height: 33.2px;
-          opacity: 0.66;
+          font-size: 23.5px; 
+          text-align: justify; 
+          line-height: 31.45px;
+          opacity: 0.7;
           padding: 0.5rem;
           cursor: pointer;
-          margin-top: -3.5rem;
         }
 
         .ViD:hover{
@@ -2504,7 +2502,7 @@ font-size: 19px;
 
           </div>
 
-          <div class="ViDe" style="margin-top: -0.99rem; width: 100%; height: 90px; background: #dcdcdce1; opacity: 0.97;"></div>
+          <div class="ViDe" style="width: 100%; height: 65px; background: #d8d8d8f3; opacity: 0.99;"></div>
 
               <div class="ViD">
               
