--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
         font-family: 'georgia';
         font-size: 0.72rem;
         color: gold;
-        background: #0b1574eb;
+        background: transparent;
+        border-bottom: 2.25px solid #e0e0e0f9;
     }
 
     .reader{
@@ -84,7 +85,7 @@
       font-size: 12px;
       padding: 5px;
       border-radius: 0.3rem;
-      color: #fff;
+      color: #000;
       margin-top: -1.15rem;
       margin-left: 0.55rem;
     }
@@ -92,7 +93,7 @@
     .Translator:hover{
       transition: 0.3s ease-in;
       width: 100%;
-      color: rgb(4, 205, 255);
+      color: rgb(4, 109, 255);
     }
 
     .BF{
@@ -105,7 +106,7 @@
       padding: 5px;
       border-radius: 0.3rem;
       cursor: pointer;
-      color: #fff;
+      color: #000;
       margin-top: -1.1rem;
       font-size: 0.75rem;
       font-family: arial;
@@ -114,7 +115,7 @@
     .BF:hover{
       transition: 0.3s ease-in;
       width: 100%;
-      color: rgb(4, 205, 255);
+      color: rgb(4, 109, 255);
     }
     
     .Asso{
@@ -130,13 +131,13 @@
       margin-top: -1.1rem;
       font-family: arial;
       font-size: 0.75rem;
-      color: #fff;
+      color: #000;
     }
 
     .Asso:hover{
       transition: 0.3s ease-in;
       width: 100%;
-      color: rgb(4, 205, 255);
+      color: rgb(4, 109, 255);
     }
 
     .datime{
@@ -150,7 +151,7 @@
       padding: 5px;
       font-family: arial;
       font-size: 0.75rem;
-      color: #fff;
+      color: #000;
       border-radius: 0.3rem;
       margin-top: -0.72rem;
       margin-left: 0.45rem;
@@ -159,7 +160,7 @@
     .datime:hover{
       transition: 0.3s ease-in;
       width: 100%;
-      color: rgb(4, 205, 255);
+      color: rgb(4, 109, 255);
     }
 
     .navbar{
@@ -168,15 +169,14 @@
         row-gap: 0.39rem;
                  justify-content: space-between;
                  justify-items: center;
-                 background: #f0f8fa;
+                 background: #fff;
                  width: 100%;
-                 height: 110px;
-                 opacity: 0.89;
+                 height: 120px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0.2px 0.5rem 1px rgba(17, 58, 153, 0.987);
+                 box-shadow: 0.2px 0.5rem 1px rgba(16, 56, 148, 0.987);
                  cursor: pointer;
           }
 
@@ -1645,7 +1645,7 @@ font-size: 19px;
   width: 100%;
   height: 467px;
   background: lightblue;
-  opacity: 0.97;
+  opacity: 0.99;
 }
 
 .VDI img{
@@ -1682,7 +1682,7 @@ font-size: 19px;
   animation: auto 12s ease-in infinite;
   animation-delay: 8s;
   background: lightblue;
-  opacity: 0.97;
+  opacity: 0.99;
 }
 
 .VDII img{
@@ -1718,7 +1718,7 @@ font-size: 19px;
   animation: auto 12s ease-in infinite;
   animation-delay: 4s;
   background: lightblue;
-  opacity: 0.97;
+  opacity: 0.99;
 }
 
 .VDIII img{
@@ -1758,7 +1758,7 @@ font-size: 19px;
           font-size: 23.5px; 
           text-align: justify; 
           line-height: 31.45px;
-          opacity: 0.7;
+          opacity: 0.75;
           padding: 0.5rem;
           cursor: pointer;
         }
@@ -2011,10 +2011,10 @@ font-size: 19px;
     font-size: 15.25px;
     padding: 2px;
     background: #bd2157f0;
-    margin-top: -15px;
-    margin-left: 0.53rem;
+    margin-top: -11.5px;
+    margin-left: 0.52rem;
     cursor: pointer;
-    border: 0.12rem solid rgba(11, 11, 93, 0.97);
+    border: 0.12rem solid rgba(10, 10, 90, 0.926);
     
    }
 
