--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         font-size: 0.72rem;
         color: gold;
         background: transparent;
+        border-bottom: 2px solid #f1f1f1;
     }
 
     .reader{
@@ -176,7 +177,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 8.5px 0.4rem 1px rgba(22, 53, 177, 0.988);
+                 box-shadow: 0 8.5px 0.33rem 1px rgba(24, 60, 205, 0.936);
                  cursor: pointer;
           }
 
@@ -2008,10 +2009,10 @@ font-size: 19px;
     border-radius: 50%;
     color: yellow;
     font-family: 'arial narrow';
-    font-size: 15.23px;
+    font-size: 15.2px;
     padding: 2px;
     background: #bd2157f0;
-    margin-top: -14.5px;
+    margin-top: -13px;
     margin-left: 0.57rem;
     cursor: pointer;
     border: 0.12rem solid rgba(10, 10, 90, 0.926);
