--- a/index.html
+++ b/index.html
@@ -92,9 +92,11 @@
     }
 
     .Translator:hover{
-      transition: 0.3s ease-in;
+      padding: 8px;
+      transition: 0.2s linear;
       width: 100%;
       color: red;
+      text-decoration: underline;
     }
 
     .BF{
@@ -114,9 +116,11 @@
     }
 
     .BF:hover{
-      transition: 0.3s ease-in;
+      padding: 8px;
+      transition: 0.2s linear;
       width: 100%;
       color: red;
+      text-decoration: underline;
     }
     
     .Asso{
@@ -127,7 +131,7 @@
       width: 100%;
       height: 1.5rem;
       border-radius: 0.3rem;
-      padding: 5px;
+      padding: 8px;
       cursor: pointer;
       margin-top: -1.1rem;
       font-family: 'arial black';
@@ -136,9 +140,11 @@
     }
 
     .Asso:hover{
-      transition: 0.3s ease-in;
+      padding: 8px;
+      transition: 0.2s linear;
       width: 100%;
       color: red;
+      text-decoration: underline;
     }
 
     .datime{
@@ -159,9 +165,11 @@
     }
 
     .datime:hover{
-      transition: 0.3s ease-in;
+      padding: 8px;
+      transition: 0.2s linear;
       width: 100%;
       color: red;
+      text-decoration: underline;
     }
 
     .navbar{
@@ -172,12 +180,12 @@
                  justify-items: center;
                  background: #fff;
                  width: 100%;
-                 height: 125px;
+                 height: 130px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 8.5px 0.33rem 1px rgba(25, 61, 204, 0.936);
+                 box-shadow: 0 8px 0.33rem 1.2px rgba(0, 86, 206, 0.883);
                  cursor: pointer;
           }
 
@@ -361,7 +369,7 @@
       justify-items: center;
       width: 100%;
       height: 1060px;
-      background: rgba(215, 221, 230, 0.215);  
+      background: rgba(226, 232, 240, 0.215);  
       color: rgba(122, 121, 121, 0.92);
       font-family: 'helvetica';
       font-weight: bold;
@@ -1756,11 +1764,11 @@ font-size: 19px;
           align-items: center;
           flex-direction: column;
           width: 75.55%;
-          height: 520px;
+          height: 500px;
           color: #646464ee; 
-          font-size: 23.5px; 
+          font-size: 22px; 
           text-align: justify; 
-          line-height: 31px;
+          line-height: 32px;
           padding: 1rem;
           cursor: pointer;
           background: transparent;
@@ -2014,10 +2022,10 @@ font-size: 19px;
     font-size: 15.2px;
     padding: 2px;
     background: #bd2157f0;
-    margin-top: -13px;
+    margin-top: -11px;
     margin-left: 0.57rem;
     cursor: pointer;
-    border: 0.12rem solid rgba(10, 10, 90, 0.926);
+    border: 0.12rem solid rgba(10, 51, 90, 0.926);
     
    }
 
