--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 8px 0.33rem 1.2px rgba(0, 86, 206, 0.883);
+                 border-bottom: 2px solid #f1f1f1;
                  cursor: pointer;
           }
 
