--- a/index.html
+++ b/index.html
@@ -369,8 +369,8 @@
       justify-items: center;
       width: 100%;
       height: 1060px;
-      background: rgba(205, 217, 233, 0.297);  
-      color: rgba(122, 121, 121, 0.92);
+      background: rgba(191, 207, 247, 0.36);  
+      color: rgba(165, 165, 165, 0.92);
       font-family: 'helvetica';
       font-weight: bold;
       padding: 1.5rem;
@@ -1763,12 +1763,12 @@ font-size: 19px;
           justify-content: center;
           align-items: center;
           flex-direction: column;
-          width: 75.55%;
-          height: 500px;
+          width: 77%;
+          height: 505px;
           color: #646464ee; 
-          font-size: 22px; 
+          font-size: 21.6px; 
           text-align: justify; 
-          line-height: 32px;
+          line-height: 30px;
           padding: 1rem;
           cursor: pointer;
           background: transparent;
@@ -2513,11 +2513,11 @@ font-size: 19px;
 
           </div>
 
-          <div class="ViDe" style="width: 100%; height: 80px; background: #d9d9d9f5;"></div>
+          <div class="ViDe" style="width: 100%; height: 87px; background: #b1b9d275;"></div>
 
               <div class="ViD">
               
-                <h1 style="font-size: 2rem; text-align: left; color: orangered;">What it means to live with a disability ?</h1>
+                <h1 style="font-size: 2rem; text-align: left; margin-top: 0.45rem; color: orangered;">What it means to live with a disability ?</h1>
             <p>Living as a disabled is very challenging but also learning in terms of how the society makes its approach with disabilty and disabled people in general, Sometimes, it's like those people may be similar to social barometers despite social bareers they are experiencing every single day. 
               From disabled people, it may be possible to jauge the level of humility, sensibility, receptivity, proactivity and/or solidarity amongst many other qualities of people, based partly on their behavings. 
               There is no doubt that being disabled is not easy and the level of difficulties varies from person to person and from a region to another.
