--- a/index.html
+++ b/index.html
@@ -47,21 +47,20 @@
         justify-content: center;
         justify-items: center;
         width: 100%;
-        height: 2.5rem;
-        padding: 0.5rem;
+        height: 2rem;
+        padding: 0.15rem;
         object-fit: cover;
         font-family: 'georgia';
         font-size: 0.72rem;
         color: gold;
-        background: transparent;
-        border-bottom: 2px solid #f1f1f1;
+        background: rgba(210, 240, 250, 0.948);
+        border-bottom: 1.5px dotted #0b79ffe5;
     }
 
     .reader{
       display: grid;
         grid-template-columns: 0.35fr 1.1fr;
         column-gap: 0.5rem;
-        border-bottom: 2px solid #f1f1f1;
         color: #171717e3;  
         font-family: 'Poppins';
         font-size: 1rem; 
@@ -72,6 +71,7 @@
         padding-top: 0.4rem;
         padding-bottom: 0.45rem;
         word-spacing: 1px;
+        background: #fff;
         
     }
 
@@ -185,7 +185,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 border-bottom: 2px solid #f1f1f1;
+                 border-bottom: 0.14rem solid #f1f1f1;
                  cursor: pointer;
           }
 
@@ -1769,7 +1769,9 @@ font-size: 19px;
           font-size: 21.6px; 
           text-align: justify; 
           line-height: 29.5px;
-          padding: 1rem;
+          padding: 2rem;
+          border-left: 0.2rem dotted rgba(255, 68, 0, 0.63);
+          border-right: 0.2rem dotted rgba(255, 68, 0, 0.63);
           cursor: pointer;
           background: transparent;
         }
@@ -2452,7 +2454,7 @@ font-size: 19px;
 
                 <div class="Unify"> 
 
-            <a href="#" target="blank">
+            <a href="file:///C:/Users/User/Documents/Tik-Yik.html" target="blank">
             <div class="myDiv">
               <b>Tiki N'Yiki Foundation</b>
             </div>
