--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 border-bottom: 0.14rem solid #f1f1f1;
+                 border-bottom: 2px solid #f1f1f1;
                  cursor: pointer;
           }
 
@@ -369,7 +369,7 @@
       justify-items: center;
       width: 100%;
       height: 1090px;
-      background: rgba(200, 209, 249, 0.343);  
+      background: rgba(207, 216, 250, 0.176);  
       color: rgba(174, 173, 173, 0.92);
       font-family: 'helvetica';
       font-weight: bold;
@@ -1770,8 +1770,6 @@ font-size: 19px;
           text-align: justify; 
           line-height: 29.5px;
           padding: 2rem;
-          border-left: 0.2rem dotted rgba(255, 68, 0, 0.63);
-          border-right: 0.2rem dotted rgba(255, 68, 0, 0.63);
           cursor: pointer;
           background: transparent;
         }
@@ -2025,7 +2023,7 @@ font-size: 19px;
     padding: 2px;
     background: #bd2157f0;
     margin-top: -11px;
-    margin-left: 0.57rem;
+    margin-left: 0.45rem;
     cursor: pointer;
     border: 0.12rem solid rgba(10, 51, 90, 0.926);
     
@@ -2515,7 +2513,7 @@ font-size: 19px;
 
           </div>
 
-          <div class="ViDe" style="width: 100%; height: 69.9px; background: #5587fc71;"></div>
+          <div class="ViDe" style="width: 100%; height: 52px; border-bottom: 0.98rem solid rgba(11, 125, 255, 0.273); background: rgba(195, 223, 255, 0.944);"></div>
 
               <div class="ViD">
               
@@ -2912,7 +2910,7 @@ font-size: 19px;
               <div class="footer1">
                 <figure>
                 <img src="https://www.zupimages.net/up/21/49/h8iv.jpg" alt="Champignon Ahuntsic">
-                <figcaption style="font-size: 14px; text-align: left; margin-top: -7px; color: #4b4b4bea;">A Mushroom [A Temporary image]</figcaption>
+                <figcaption style="font-size: 11.5px; text-align: left; margin-top: -12px; color: #353535ea;">A Mushroom [A Temporary image]</figcaption>
                 </figure>
               </div>
             </a>
