--- a/index.html
+++ b/index.html
@@ -369,8 +369,8 @@
       justify-content: center;
       justify-items: center;
       width: 100%;
-      height: 1096px;
-      background: rgba(191, 224, 253, 0.332);  
+      height: 1130px;
+      background: rgba(188, 227, 253, 0.298);  
       color: rgba(111, 111, 111, 0.925);
       font-family: 'helvetica';
       font-weight: bold;
@@ -1761,17 +1761,18 @@ font-size: 19px;
           justify-content: center;
           align-items: center;
           flex-direction: column;
-          width: 78%;
-          height: 565px;
-          color: #3d3d3ded; 
-          font-size: 22px; 
+          width: 77%;
+          height: 577px;
+          color: #515151e7; 
+          font-family: arial;
+          font-size: 21.5px; 
           text-align: justify; 
-          line-height: 34.5px;
+          line-height: 31.25px;
           padding: 2rem;
           cursor: pointer;
           background: transparent;
-          border: 0.5rem solid #fff;
-          border-radius: 0.5rem;
+          border: 0.25rem solid #909090d9;
+          border-radius: 0.45rem;
         }
 
 .footer1 img{
@@ -2512,11 +2513,10 @@ font-size: 19px;
 
               <div class="ViD">
               
-                <h1 style="font-size: 2rem; text-align: left; margin-top: 0.9rem; color: #4a4949e4;">What it means to live with a disability ?</h1>
-            <p>Living as a disabled is very challenging but also learning in terms of how the society makes its approach with disabilty and disabled people in general, Sometimes, it's like those people may be similar to social barometers despite social bareers they are experiencing every single day. 
-              From disabled people, it may be possible to jauge the level of humility, sensibility, receptivity, proactivity and/or solidarity amongst many other qualities of people, based partly on their behavings. 
-              There is no doubt that being disabled is not easy and the level of difficulties varies from person to person and from a region to another.
-               Depending the status and the region where disabled people are living, will determine the quality and life experiences. Many of you do know the existence of discriminations towards these people but it shouldn't. How tough it is for them to manage a lifetime to fulfill. That's why Tiki N'Yiki is implemented and is focused to improve Education for disabled kids and helps them realize their dreams.
+                <h1 style="font-size: 2rem; text-align: left; margin-top: 0.9rem; color: #555454e4;">What it means to live with a disability ?</h1>
+            <p>Living as a disabled person is very challenging. Over the learning side, living as disabled is also teaching in terms of how the courage and the determination of disabled people can inspire, energize and grown hope for people in communities. Sometimes disabled people can unintentionally turn into social barometers - despite the social bareers - and by social interactions they may be able to measure the level and the trending of 
+             certain human values including humility, mutual respect between people, sharing spirit, sensibility, compassion, proactivity and solidarity amongst others. There is no doubt that being disabled is not easy and the issues can vary from person to person and from a region to another.
+               Depending the status and the region of disabled people, will determine the quality and the quantity of their lives experiences. But it's not unknown that the harsh and silent climate of discriminations towards disabled people, is undermining their rights. They have always to deal with unfairness and stigmatisation. It shouldn't. That's why Tiki N'Yiki is created to improve Education and Protect Rights of disabled people especially disabled children.
 
               </p>
         
