--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         font-size: 0.72rem;
         color: gold;
         background: rgba(210, 240, 250, 0.948);
-        border-bottom: 1.5px dotted #0b79ffe5;
+        border-bottom: 2.15px dotted #0b79ffe5;
         opacity: 0.98;
     }
 
@@ -216,7 +216,7 @@
             margin-top: -5px;
             height: 40px;
             width: 100%;
-            color: #696969ef;
+            color: #1e1e1ef8;
             border: 0.3rem solid transparent;
             background: transparent;
           }
@@ -240,7 +240,7 @@
             cursor: pointer;
             font-family: helvetica;
             opacity: 0.97;
-            color: #696969ef;
+            color: #1e1e1ef8;
             border: 0.3rem solid transparent;
             background: transparent;
           }
@@ -263,7 +263,7 @@
             cursor: pointer;
             font-family: helvetica;
             opacity: 0.97;
-            color: #696969ef;
+            color: #1e1e1ef8;
             border: 0.3rem solid transparent;
             background: transparent;
           }
@@ -286,7 +286,7 @@
             cursor: pointer;
             font-family: helvetica;
             opacity: 0.97;
-            color: #696969ef;
+            color: #1e1e1ef8;
             border: 0.3rem solid transparent;
             background: transparent;
           }
@@ -310,7 +310,7 @@
             font-family: helvetica;
             opacity: 0.97;
             border: 0.3rem solid transparent;
-            color: #696969ef;
+            color: #1e1e1ef8;
             background: transparent;
           }
 
@@ -333,7 +333,7 @@
             font-family: helvetica;
             opacity: 0.97;
             border: 0.3rem solid transparent;
-            color: #696969ef;
+            color: #1e1e1ef8;
             background: transparent;
           }
 
@@ -370,7 +370,7 @@
       justify-items: center;
       width: 100%;
       height: 1130px;
-      background: rgba(188, 225, 253, 0.314);  
+      background: rgba(177, 224, 253, 0.349);  
       color: rgba(111, 111, 111, 0.925);
       font-family: 'helvetica';
       font-weight: bold;
@@ -454,7 +454,7 @@
             background: transparent;
             padding: 10px;
             color: #000;
-            margin-top: 6.6rem;
+            margin-top: 3.4rem;
            
           }
 
@@ -1763,16 +1763,17 @@ font-size: 19px;
           flex-direction: column;
           width: 77%;
           height: 580px;
-          color: #666565e7; 
+          color: #807f7fe7; 
           font-family: arial;
           font-size: 21.5px; 
           text-align: justify; 
           line-height: 31px;
           padding: 2rem;
           cursor: pointer;
-          background: transparent;
-          border: 0.14rem solid #abababd9;
-          border-radius: 0.45rem;
+          background: #fff;
+          border-bottom-left-radius: 0.9rem;
+          border-bottom-right-radius: 0.9rem;
+          opacity: 0.96;
         }
 
 .footer1 img{
@@ -2514,7 +2515,7 @@ font-size: 19px;
               <div class="ViD">
               
                 <h1 style="font-size: 2rem; text-align: left; margin-top: 0.9rem; color: #555454e4;">What it means to live with a disability ?</h1>
-            <p>Living as a disabled person is life-challenging. Over the learning side that goes with discriminations, living as a disabled may be teaching in terms of how the courage and the determination of disabled people can inspire, energize and bring hope for some normal people. Sometimes disabled people are unintentionally considered to be like social barometers despite social bareers. Through conversations and social interactions, they may be able to measure the level and the trending of 
+            <p>Living as a disabled person is life-changing and perpetual challenging. Over the learning side that goes with discriminations, living as a disabled may be teaching in terms of how the courage and the determination of disabled people can inspire, energize and may bring hope for some people in communities. Sometimes disabled people are unintentionally considered to be like social barometers despite social bareers they do encounter on a daily basis. Through conversations and social interactions, they may be able to measure the level and the trending of 
              certain human values including humility, mutual respect between people, sharing spirit, sensibility, compassion, proactivity and solidarity amongst others. Being disabled is undoubtly tough and the issues can vary from person to person and from a region to another.
                Depending the status and the region of disabled people, will determine the quality and the quantity of their lives experiences. But it's not unknown that the harsh and silent climate of discriminations towards disabled people, is undermining their rights. They have always to deal with unfairness and stigmatisation. It shouldn't. That's why Tiki N'Yiki is created to improve Education and Protect Rights of disabled people especially disabled children.
 
