--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
         font-family: 'georgia';
         font-size: 0.72rem;
         color: gold;
-        background: rgba(210, 240, 250, 0.948);
-        border-bottom: 2.15px dotted #0b79ffe5;
-        opacity: 0.98;
+        background: rgba(24, 81, 155, 0.989);
     }
 
     .reader{
@@ -84,7 +82,7 @@
       width: 100%;
       height: 1.45rem;
       font-size: 12.85px;
-      color: rgb(3, 6, 195);
+      color: #fff;
       font-family: 'arial black';
       padding: 5px;
       border-radius: 0.3rem;
@@ -112,7 +110,7 @@
       cursor: pointer;
       margin-top: -1.1rem;
       font-size: 12.85px;
-      color: rgb(3, 6, 195);
+      color: #fff;
       font-family: 'arial black';
     }
 
@@ -137,7 +135,7 @@
       margin-top: -1.1rem;
       font-family: 'arial black';
       font-size: 12.85px;
-      color: rgb(3, 6, 195);
+      color: #fff;
     }
 
     .Asso:hover{
@@ -159,7 +157,7 @@
       padding: 5px;
       font-family: 'arial black';
       font-size: 11.8px;
-      color: rgb(3, 6, 195);
+      color: #fff;
       border-radius: 0.3rem;
       margin-top: -0.72rem;
       margin-left: 0.45rem;
@@ -216,7 +214,7 @@
             margin-top: -5px;
             height: 40px;
             width: 100%;
-            color: #1e1e1ef8;
+            color: #8d8d8de8;
             border: 0.3rem solid transparent;
             background: transparent;
           }
@@ -240,7 +238,7 @@
             cursor: pointer;
             font-family: helvetica;
             opacity: 0.97;
-            color: #1e1e1ef8;
+            color: #8d8d8de8;
             border: 0.3rem solid transparent;
             background: transparent;
           }
@@ -263,7 +261,7 @@
             cursor: pointer;
             font-family: helvetica;
             opacity: 0.97;
-            color: #1e1e1ef8;
+            color: #8d8d8de8;
             border: 0.3rem solid transparent;
             background: transparent;
           }
@@ -286,7 +284,7 @@
             cursor: pointer;
             font-family: helvetica;
             opacity: 0.97;
-            color: #1e1e1ef8;
+            color: #8d8d8de8;
             border: 0.3rem solid transparent;
             background: transparent;
           }
@@ -310,7 +308,7 @@
             font-family: helvetica;
             opacity: 0.97;
             border: 0.3rem solid transparent;
-            color: #1e1e1ef8;
+            color: #8d8d8de8;
             background: transparent;
           }
 
@@ -333,7 +331,7 @@
             font-family: helvetica;
             opacity: 0.97;
             border: 0.3rem solid transparent;
-            color: #1e1e1ef8;
+            color: #8d8d8de8;
             background: transparent;
           }
 
