--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       padding: 8px;
       transition: 0.2s linear;
       width: 100%;
-      color: red;
+      color:cyan;
       text-decoration: underline;
     }
 
@@ -118,7 +118,7 @@
       padding: 8px;
       transition: 0.2s linear;
       width: 100%;
-      color: red;
+      color: cyan;
       text-decoration: underline;
     }
     
@@ -142,7 +142,7 @@
       padding: 8px;
       transition: 0.2s linear;
       width: 100%;
-      color: red;
+      color: cyan;
       text-decoration: underline;
     }
 
@@ -167,7 +167,7 @@
       padding: 8px;
       transition: 0.2s linear;
       width: 100%;
-      color: red;
+      color: cyan;
       text-decoration: underline;
     }
 
