--- a/index.html
+++ b/index.html
@@ -367,12 +367,13 @@
       justify-content: center;
       justify-items: center;
       width: 100%;
-      height: 1130px;
-      background: rgba(195, 199, 208, 0.275);  
+      height: 1150px;
+      background: rgba(225, 228, 235, 0.246);  
       color: rgba(111, 111, 111, 0.925);
       font-family: 'helvetica';
       font-weight: bold;
       padding: 1rem;
+      opacity: 0.95;
       
     }
     
@@ -440,6 +441,7 @@
         width: 100%;
         height: auto;
         background: #fff;
+        opacity: 0.95;
     }
   
     .content1{
@@ -1761,17 +1763,17 @@ font-size: 19px;
           flex-direction: column;
           width: 77%;
           height: 580px;
-          color: #807f7fe7; 
+          color: #8f8f8fe7; 
           font-family: arial;
           font-size: 21.5px; 
-          text-align: justify; 
+          text-align: left; 
           line-height: 31px;
           padding: 2rem;
           cursor: pointer;
           background: #fff;
           border-bottom-left-radius: 0.9rem;
           border-bottom-right-radius: 0.9rem;
-          opacity: 0.96;
+          opacity: 0.9;
         }
 
 .footer1 img{
