--- a/index.html
+++ b/index.html
@@ -374,6 +374,7 @@
       font-weight: bold;
       padding: 1rem;
       opacity: 0.95;
+      border-bottom: 0.16px solid rgba(196, 199, 204, 0.206);
       
     }
     
@@ -441,7 +442,7 @@
         width: 100%;
         height: auto;
         background: #fff;
-        opacity: 0.95;
+        opacity: 0.97;
     }
   
     .content1{
@@ -1763,17 +1764,17 @@ font-size: 19px;
           flex-direction: column;
           width: 77%;
           height: 580px;
-          color: #8f8f8fe7; 
+          color: #838383ee; 
           font-family: arial;
-          font-size: 21.5px; 
+          font-size: 21.53px; 
           text-align: left; 
-          line-height: 31px;
+          line-height: 31.2px;
           padding: 2rem;
           cursor: pointer;
           background: #fff;
-          border-bottom-left-radius: 0.9rem;
-          border-bottom-right-radius: 0.9rem;
-          opacity: 0.9;
+          border: 0.15px solid rgba(196, 199, 204, 0.206);
+          opacity: 0.95;
+          border-radius: 3rem;
         }
 
 .footer1 img{
